# secure_notebook

./: .gitignore  Cargo.toml  README.md
src/: acess_types.rs  default_no_write_permission.sb  lib.rs  notebook_defaults.sb  templates.rs
