[package]
name = "secure_notebook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
serde = { version = "*", features = ["derive"] }

[dev-dependencies]
jupyter-client = { git = "https://github.com/sxhxliang/jupyter-client-rs.git" }
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["full"] }
